--- a/gb/20/4/29/n12070256.md
+++ b/gb/20/4/29/n12070256.md
@@ -1,15 +1,15 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ldrwvv219/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ldrwvv219/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/ldrwvv219/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ldrwvv219/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/ldrwvv219/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ldrwvv219/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/ldrwvv219/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ldrwvv219/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/ldrwvv219/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ldrwvv219/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/ldrwvv219/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ldrwvv219/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/ldrwvv219/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ldrwvv219/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/ldrwvv219/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ldrwvv219/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/ldrwvv219/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/ldrwvv219/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ldrwvv219/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ldrwvv219/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ldrwvv219/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ldrwvv219/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ldrwvv219/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ldrwvv219/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ldrwvv219/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ldrwvv219/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ldrwvv219/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ldrwvv219/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ldrwvv219/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ldrwvv219/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ldrwvv219/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/ldrwvv219/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/ldrwvv219/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ldrwvv219/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ldrwvv219/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ldrwvv219/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ldrwvv219/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ldrwvv219/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ldrwvv219/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ldrwvv219/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ldrwvv219/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/ldrwvv219/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ldrwvv219/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ldrwvv219/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ldrwvv219/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>医护辛苦了！竹三校赠餐点防疫品加油打气</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2020/04/0de630230d81e09d9a35dd7c5e025fea-600x400.jpg" />
 <h6>防疫期间，元培医事科技大学为了替第一线医护人员加油打气，29日下午由校长林志城领队，与光复高中将健康茶点及抗菌香包，赠予马偕医院，由副院长陈重助代表接受并表达感谢。（元培医事科技大学提供）
 </h6>
 <hr>
-<p>【大纪元2020年04月29日讯】（大纪元记者林倩玉台湾新竹报导）防疫期间，<ahref="https://github.com/ldrwvv219/djy/blob/master/gb/tag/%E5%85%83%E5%9F%B9.md#1">元培</a>医事科技大学为了替第一线医护人员加油打气，29日上午与世界高中，共同致赠新竹<ahref="https://github.com/ldrwvv219/djy/blob/master/gb/tag/%E5%9B%BD%E6%B3%B0%E5%8C%BB%E9%99%A2.md#1">国泰医院</a>健康餐盒及洗手液；下午则与<ahref="https://github.com/ldrwvv219/djy/blob/master/gb/tag/%E5%85%89%E5%A4%8D%E9%AB%98%E4%B8%AD.md#1">光复高中</a>将健康茶点及抗菌香包，赠予<ahref="https://github.com/ldrwvv219/djy/blob/master/gb/tag/%E9%A9%AC%E5%81%95%E5%8C%BB%E9%99%A2.md#1">马偕医院</a>。院方则由国泰医院院长李兴中及马偕医院副院长陈重助代表接受并表达感谢。</p>
-<p>健康餐盒由<ahref="https://github.com/ldrwvv219/djy/blob/master/gb/tag/%E5%85%83%E5%9F%B9.md#1">元培</a>餐管系“型男主厨”陈麒文老师、与专业营养师杨婷琪老师设计，带领元培餐管系与世界高中餐饮科学生，制作出可帮助医护人员补充体力与提升免疫力的餐盒，菜色包括健康舒肥鸡胸、段木香菇虾仁卷、花椰杏鲍菇以及彩椒鲜山药，不但采用新竹在地食材，更具有丰富维生素B群、保护肠胃以及提升免疫力的作用。另外，元培生技制药系也为医院制备100份天皇级配方的干洗手，除酒精、精油以及茶抽出物等抗菌成分外，特别加了保湿配方更滋润。</p>
-<figure id="attachment_12070259" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/04/c591689118cd8ebccf94d332091dedb7.jpg"><img class="wp-image-12070259 size-large" src="https://i.epochtimes.com/assets/uploads/2020/04/c591689118cd8ebccf94d332091dedb7-600x450.jpg" alt="" width="600" b="450" /></a><figcaption class="wp-caption-text">元培医事科技大学为了替第一线医护人员加油打气，29日上午与世界高中，共同致赠新竹<ahref="https://github.com/ldrwvv219/djy/blob/master/gb/tag/%E5%9B%BD%E6%B3%B0%E5%8C%BB%E9%99%A2.md#1">国泰医院</a>健康餐盒及洗手液。（左起：世界高中校长苏至斌、元培医事科技大学校长林志城、国泰医院院长李兴中）（元培医事科技大学提供）</figcaption></figure>
-<p>健康茶点则由元培餐管系西点及调饮制作专业老师刘婉真、严如钰设计，选用具养生作用的食材，带领学生制作包括养生姜黄南瓜包、高纤杂粮饼干、乳酸桂圆蛋糕以及健康养气茶，搭配光复中学幼保科学生制作的抗菌香包，组合成健康茶点餐盒，共致赠一百份给新竹<ahref="https://github.com/ldrwvv219/djy/blob/master/gb/tag/%E9%A9%AC%E5%81%95%E5%8C%BB%E9%99%A2.md#1">马偕医院</a>，让辛苦投入防疫工作的医护人员有个舒缓又健康下午茶。</p>
+<p>【大纪元2020年04月29日讯】（大纪元记者林倩玉台湾新竹报导）防疫期间，<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%85%83%E5%9F%B9.md#1">元培</a>医事科技大学为了替第一线医护人员加油打气，29日上午与世界高中，共同致赠新竹<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%9B%BD%E6%B3%B0%E5%8C%BB%E9%99%A2.md#1">国泰医院</a>健康餐盒及洗手液；下午则与<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%85%89%E5%A4%8D%E9%AB%98%E4%B8%AD.md#1">光复高中</a>将健康茶点及抗菌香包，赠予<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E9%A9%AC%E5%81%95%E5%8C%BB%E9%99%A2.md#1">马偕医院</a>。院方则由国泰医院院长李兴中及马偕医院副院长陈重助代表接受并表达感谢。</p>
+<p>健康餐盒由<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%85%83%E5%9F%B9.md#1">元培</a>餐管系“型男主厨”陈麒文老师、与专业营养师杨婷琪老师设计，带领元培餐管系与世界高中餐饮科学生，制作出可帮助医护人员补充体力与提升免疫力的餐盒，菜色包括健康舒肥鸡胸、段木香菇虾仁卷、花椰杏鲍菇以及彩椒鲜山药，不但采用新竹在地食材，更具有丰富维生素B群、保护肠胃以及提升免疫力的作用。另外，元培生技制药系也为医院制备100份天皇级配方的干洗手，除酒精、精油以及茶抽出物等抗菌成分外，特别加了保湿配方更滋润。</p>
+<figure id="attachment_12070259" aria-describedby="caption-attachment-12070259" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2020/04/c591689118cd8ebccf94d332091dedb7.jpg"><img class="wp-image-12070259 size-large" src="https://i.epochtimes.com/assets/uploads/2020/04/c591689118cd8ebccf94d332091dedb7-600x450.jpg" alt="" width="600" b="450" /></a><figcaption id="caption-attachment-12070259" class="wp-caption-text">元培医事科技大学为了替第一线医护人员加油打气，29日上午与世界高中，共同致赠新竹<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%9B%BD%E6%B3%B0%E5%8C%BB%E9%99%A2.md#1">国泰医院</a>健康餐盒及洗手液。（左起：世界高中校长苏至斌、元培医事科技大学校长林志城、国泰医院院长李兴中）（元培医事科技大学提供）</figcaption></figure>
+<p>健康茶点则由元培餐管系西点及调饮制作专业老师刘婉真、严如钰设计，选用具养生作用的食材，带领学生制作包括养生姜黄南瓜包、高纤杂粮饼干、乳酸桂圆蛋糕以及健康养气茶，搭配光复中学幼保科学生制作的抗菌香包，组合成健康茶点餐盒，共致赠一百份给新竹<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E9%A9%AC%E5%81%95%E5%8C%BB%E9%99%A2.md#1">马偕医院</a>，让辛苦投入防疫工作的医护人员有个舒缓又健康下午茶。</p>
 <p>元培医事科技大学校长林志城指出，吃得营养才能提升免疫力，一向标榜健康养生餐饮的元培餐饮管理系师生，从选材到制作就能做出与一般便当不同的健康餐点，提供第一线医护人员，向他们表达支持的心意。他说，许多第一线医护人员包括放射、检验等医事人员都是元培校友，更要力挺他们撑过这段时间。</p>
 <p>李兴中感谢元培医大、世界高中及各界对国泰医院的加油打气。他表示，防疫期间，国泰医院戮力提升防护与救治量能，增聘人力投入防疫筛检，不分夜间与假日通讯诊疗，以避免检疫病人奔波，增加防疫专责病房，建置专业防疫筛检站，专业客制化采检隔板、分舱、分流、分班精实救护工作，尽一己之力共同让台湾的防疫在世界发光！</p>
 <p>陈重助表示，这波抗疫行动让医护人员倍感辛苦，但马偕医院没有人退缩。最近一波波从公司、民间团体到个人的送餐支持行动，让医护人员感到温暖，有了继续奋战的勇气。他感谢元培医事科大携手光复中学，师生一起站出来相挺，给医护人员带来非常大的精神鼓励。</p>
@@ -19,42 +19,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/ldrwvv219/djy/blob/master/gb/17/1/9/n8683323.md#1">光复高中纳粹事件  校长辞职9日生效</a></li>
-<li><a href="https://github.com/ldrwvv219/djy/blob/master/gb/18/5/14/n10391768.md#1">台国泰医院援助斐济医疗 获外交之友贡献奖</a></li>
-<li><a href="https://github.com/ldrwvv219/djy/blob/master/gb/18/6/13/n10481111.md#1">马偕医院 日留450个转诊</a></li>
-<li><a href="https://github.com/ldrwvv219/djy/blob/master/gb/18/7/10/n10550388.md#1">医疗外交添佳话 马偕医院救援友邦重症男婴</a></li>
-<li><a href="https://github.com/ldrwvv219/djy/blob/master/gb/18/11/26/n10875161.md#1">帮助菜农 新竹马偕医院爱心义卖高丽菜</a></li>
-<li><a href="https://github.com/ldrwvv219/djy/blob/master/gb/19/7/16/n11387817.md#1">马来西亚环球厨艺挑战赛 元培医科大客家菜夺冠</a></li>
-<li><a href="https://github.com/ldrwvv219/djy/blob/master/gb/19/8/20/n11465659.md#1">出现超级传染者 国泰医院麻疹群聚新增2人</a></li>
-<li><a href="https://github.com/ldrwvv219/djy/blob/master/gb/19/11/7/n11639583.md#1">第七届韩国国际技能人   元培医科大获11金3银</a></li>
-<li><a href="https://github.com/ldrwvv219/djy/blob/master/gb/19/11/9/n11644367.md#1">元培医大校庆 西城扶轮社捐清寒助学金</a></li>
-<li><a href="https://github.com/ldrwvv219/djy/blob/master/gb/20/1/16/n11797692.md#1">光纤智慧照护科技 元培医科大正式启用</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/1/9/n8683323.md#1">光复高中纳粹事件  校长辞职9日生效</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/14/n10391768.md#1">台国泰医院援助斐济医疗 获外交之友贡献奖</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/13/n10481111.md#1">马偕医院 日留450个转诊</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/7/10/n10550388.md#1">医疗外交添佳话 马偕医院救援友邦重症男婴</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/11/26/n10875161.md#1">帮助菜农 新竹马偕医院爱心义卖高丽菜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/7/16/n11387817.md#1">马来西亚环球厨艺挑战赛 元培医科大客家菜夺冠</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/8/20/n11465659.md#1">出现超级传染者 国泰医院麻疹群聚新增2人</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/11/7/n11639583.md#1">第七届韩国国际技能人 元培医科大获11金3银</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/11/9/n11644367.md#1">元培医大校庆 西城扶轮社捐清寒助学金</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/1/16/n11797692.md#1">光纤智慧照护科技 元培医科大正式启用</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/2/2/n11020634.md#1" target="_blank">林辉：与张大千比肩的画坛宗师饮恨而终</a></li><li><a href="https://github.com/ldrwvv219/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank">马克思的成魔之路</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/22/n11273218.md#1" target="_blank">用实际行动赎罪 派出所所长胃癌痊愈</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank">藏字石 蕴天机</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/10/n10965703.md#1" target="_blank">共产暴政录：广西文革大屠杀事件</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/6/3/n11297122.md#1" target="_blank">外媒：中国陆军医院前实习生亲历活摘器官</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/ldrwvv219/djy/blob/master/gb/20/4/27/n12065545.md#1">董卿刚刚辟谣 其老公密春雷“暴富史”被扒</a></li>
-<li><a href="https://github.com/ldrwvv219/djy/blob/master/gb/20/4/27/n12065576.md#1">专家：金正恩可能在视察导弹试射时受伤</a></li>
-<li><a href="https://github.com/ldrwvv219/djy/blob/master/gb/20/4/27/n12064980.md#1">【新闻看点】庚子年忧思疯传 北京麻烦有多少？</a></li>
-<li><a href="https://github.com/ldrwvv219/djy/blob/master/gb/20/4/27/n12064628.md#1">台劳工纾困贷款10万元 4月30日首批开放申请</a></li>
-<li><a href="https://github.com/ldrwvv219/djy/blob/master/gb/20/4/28/n12068456.md#1">疫情追查 传五眼联盟在调查石正丽周鹏</a></li>
-<li><a href="https://github.com/ldrwvv219/djy/blob/master/gb/20/4/26/n12062937.md#1">周星驰近况曝光 与林允隔空互动笑翻网络</a></li>
-<li><a href="https://github.com/ldrwvv219/djy/blob/master/gb/20/4/27/n12065497.md#1">罗志祥丑闻引抵制风波 陆综近亿酬金或成泡影</a></li>
-<li><a href="https://github.com/ldrwvv219/djy/blob/master/gb/20/4/27/n12064217.md#1">流浪猫带路人去买食物给它吃 结果被收养</a></li>
-<li><a href="https://github.com/ldrwvv219/djy/blob/master/gb/20/4/28/n12068100.md#1">台湾连续三天零确诊 林志玲用逗趣谐音表心情</a></li>
-<li><a href="https://github.com/ldrwvv219/djy/blob/master/gb/20/4/26/n12062791.md#1">圈内人相继染疫离世 日本名导北野武萌生退意</a></li>
-<li><a href="https://github.com/ldrwvv219/djy/blob/master/gb/20/4/25/n12060433.md#1">为着神意而战 巴顿将军的为将之道</a></li>
-<li><a href="https://github.com/ldrwvv219/djy/blob/master/gb/20/4/24/n12059475.md#1">【历史上的瘟疫】终结王莽新朝的大瘟疫</a></li>
-<li><a href="https://github.com/ldrwvv219/djy/blob/master/gb/20/4/4/n12002808.md#1">仙境一来回九十年 采药人得寿五千年</a></li>
-<li><a href="https://github.com/ldrwvv219/djy/blob/master/gb/20/4/19/n12044233.md#1">【历史上的瘟疫】科技难挡19世纪霍乱</a></li>
-<li><a href="https://github.com/ldrwvv219/djy/blob/master/gb/20/4/3/n11999664.md#1">天地清明引(271) 众生劫－王终见王1</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/16/n13442125.md#1">【百年真相】云南省委书记案 138万人受牵连</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13632196.md#1">【百年真相】三件大坏事 江泽民最想让人遗忘</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13671140.md#1">【未解之谜】沙中庞贝 楼兰之谜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/16/n13649079.md#1">【人生之钥】败家子卖田地卖金玉 结局出人意料</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/2/17/n13582749.md#1">【奇术】看风也能预知命运和兴衰成败</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13679606.md#1">【器乐独奏与协奏曲】柴可夫斯基D大调小提琴协奏曲，作品第35号</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13679601.md#1">【新闻看点】上海封控混乱 传阳性病例不通报</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13680017.md#1">吴明德：怕政权不稳 中共改行低成本动态清零</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13675009.md#1">五大战区部署歼-20 中共空军意欲何为</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13669168.md#1">配F-35C等舰载机 美福特号航母已准备好战斗</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674635.md#1">六四领袖被刺杀 FBI盯上中共间谍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676833.md#1">47岁林志玲产后首晒照 获赞“最美妈咪”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678198.md#1">威尔史密斯奥斯卡台上打人 摘影帝后致歉落泪</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678918.md#1">大S具俊晔已在台湾完成登记 结婚纪念日选这天</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676987.md#1">威尔?史密斯上台搧颁奖人 杜汶泽一假设引共鸣</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13675982.md#1">《柏捷顿家族：名门韵事》第二季影评：三角恋难题 仍可圆满解决</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13677065.md#1">新筛查方法可查出95%一期胰腺癌</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673047.md#1">搭机4点让旅途更安全 资深空姐：选飞机很重要</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/19/n13657423.md#1">吃对了肌肤就漂亮 10大食材为肌肤打底</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674013.md#1">吃奇异果不用削皮 连皮一起吃营养更加倍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676145.md#1">为什么新衣服在穿着之前要先洗涤？</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ldrwvv219/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ldrwvv219/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/4/29/n12070256.htm">医护辛苦了！竹三校赠餐点防疫品加油打气</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/4/29/n12070256.htm">医护辛苦了！竹三校赠餐点防疫品加油打气</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/ldrwvv219/djy/blob/master/gb/20/4/29/n12070256.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ldrwvv219/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ldrwvv219/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ldrwvv219/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ldrwvv219/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ldrwvv219/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ldrwvv219/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ldrwvv219/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ldrwvv219/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ldrwvv219/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ldrwvv219/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ldrwvv219/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ldrwvv219/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ldrwvv219/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ldrwvv219/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ldrwvv219/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ldrwvv219/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ldrwvv219/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ldrwvv219/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/ldrwvv219/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ldrwvv219/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ldrwvv219/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ldrwvv219/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ldrwvv219/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ldrwvv219/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/ldrwvv219/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ldrwvv219/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ldrwvv219/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ldrwvv219/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ldrwvv219/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ldrwvv219/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ldrwvv219/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ldrwvv219/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ldrwvv219/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ldrwvv219/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ldrwvv219/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ldrwvv219/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ldrwvv219/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ldrwvv219/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ldrwvv219/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ldrwvv219/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ldrwvv219/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ldrwvv219/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ldrwvv219/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ldrwvv219/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ldrwvv219/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ldrwvv219/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ldrwvv219/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ldrwvv219/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/20/4/29/n12070256.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
